Put the "syntect" class on the code
This way, playground buttons don't scroll along with the code.

--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -190,9 +190,10 @@ blockquote {
     font-style: italic;
 }
 
-pre.syntect {
+code.syntect {
     color: var(--syntect-fg);
     background: var(--syntect-bg);
     padding: 0.5em;
     overflow-y: auto;
+    display: block;
 }
