Brighten the blue on tag names in ayu

--- a/src/theme/css/syntax/ayu.css
+++ b/src/theme/css/syntax/ayu.css
@@ -61,7 +61,7 @@
  color: #ffee99;
 }
 .syn-entity.syn-name.syn-tag {
- color: #00568d;
+ color: #ff7733;
 }
 .syn-entity.syn-other.syn-attribute-name {
  color: #ff7733;
