Add configuration option to anonymize IPs in Google analytics
This adds the boolean option `anonymize-ip`. Setting it to `true`
will anonymize the IP address in Google analytics.

Tests and documentation included.

Signed-off-by: Klaus Kämpf <kkaempf@suse.de>

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -248,7 +248,9 @@
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        {{#if anonymize_ip}}
                 ga('set','anonymizeIp',!0);
+        {{/if}}
                 ga('create', '{{google_analytics}}', 'auto');
                 ga('send', 'pageview');
             }
