Fix the link to the logo so it worked on every page

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -105,7 +105,7 @@
             <div class="sidebar-scrollbox">
                 {{#if book_logo }}
                 <div class="sidebar-book-logo">
-                    <img src="{{ book_logo }}">
+                    <img src="{{ path_to_root }}{{ book_logo }}">
                 </div>
                 {{/if}}
                 {{#toc}}{{/toc}}
