Change book title to link to homepage when clicked on

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -135,7 +135,7 @@
                         {{/if}}
                     </div>
 
-                    <h1 class="menu-title">{{ book_title }}</h1>
+                    <h1 class="menu-title"><a href="/" style="text-decoration: none; color: unset">{{ book_title }}</a></h1>
 
                     <div class="right-buttons">
                         {{#if print_enable}}
