Adding a footer partial integration

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -201,6 +201,7 @@
                         <div style="clear: both"></div>
                     </nav>
                 </div>
+                {{> footer}}
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
