feat: The copy-custom-fonts parameter is now decoupled from copy_fonts
If both are enabled, the build in fonts.css is extended by the custom one.

Also both, the build in as well as the custom files are copied to the output

folder.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -35,7 +35,7 @@
 
         <!-- Fonts -->
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/font-awesome.css">
-        {{#if copy_fonts}}
+        {{#if (or copy_fonts copy_custom_fonts)}}
         <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css">
         {{/if}}
 
