--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -80,8 +80,7 @@ h6:target::before {
 
 .content {
     overflow-y: auto;
-    padding: 0 15px;
-    padding-bottom: 50px;
+    padding: 0 5px 50px 5px;
 }
 .content main {
     margin-left: auto;
