Ensure code segments always render in LTR

--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -25,6 +25,7 @@ body {
 code {
     font-family: var(--mono-font) !important;
     font-size: var(--code-font-size);
+    direction: ltr !important;
 }
 
 /* make long words/inline code not x overflow */
