Fix formatting of content attr in <meta http-equiv=refresh>
According to the HTML specification[1], there needs to be a space after the
semicolon and the URL must be unquoted.

[1]: https://html.spec.whatwg.org/multipage/semantics.html#attr-meta-http-equiv-refresh

--- a/src/theme/redirect.hbs
+++ b/src/theme/redirect.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;URL='{{url}}'">
+    <meta http-equiv="refresh" content="0; URL={{url}}">
     <meta rel="canonical" href="{{url}}">
   </head>
   <body>
