--- a/src/theme/redirect.hbs
+++ b/src/theme/redirect.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; URL={{url}}">
-    <meta rel="canonical" href="{{url}}">
+    <link rel="canonical" href="{{url}}">
   </head>
   <body>
       <p>Redirecting to... <a href="{{url}}">{{url}}</a>.</p>
