--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -4,9 +4,11 @@
 
 ::-webkit-scrollbar {
     background: var(--bg);
+    width: 8px;
 }
 ::-webkit-scrollbar-thumb {
     background: var(--scrollbar);
+    border-radius: 4px;
 }
 html {
     scrollbar-color: var(--scrollbar) var(--bg);
