--- a/src/theme/css/exclude.css
+++ b/src/theme/css/exclude.css
@@ -1,25 +1,13 @@
-.light .no-light {
-    display: none;
-}
-
-.rust .no-rust {
+.light .no-light,
+.rust .no-rust,
+.navy .no-navy,
+.ayu .no-ayu,
+.coal .no-coal {
     display: none;
 }
 
 .light .no-light-themes,
 .rust .no-light-themes {
-    display: none;
-}
-
-.navy .no-navy {
-    display: none;
-}
-
-.ayu .no-ayu {
-    display: none;
-}
-
-.coal .no-coal {
     display: none;
 }
 
