--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -139,7 +139,7 @@ table tbody tr:nth-child(2n) {
 }
 
 
-blockquote {
+blockquote, details {
     margin: 20px 0;
     padding: 0 20px;
     color: var(--fg);
