--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -90,7 +90,7 @@ h6:target::before {
 
 .content {
     overflow-y: auto;
-    padding: 0 5px 50px 5px;
+    padding: 0 5px 50vh 5px;
 }
 .content main {
     margin-left: auto;
