Add bypass block for accessibility

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -54,6 +54,7 @@
         {{/if}}
     </head>
     <body>
+    <a class="bypass-block" href="#content">Skip to content</a>
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
