--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -543,3 +543,20 @@ ul#searchresults span.teaser em {
     margin-left: -14px;
     width: 14px;
 }
+
+a.bypass-block {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+    clip-path: inset(50%);
+    font-size: 1.2em;
+    background-color: var(--theme-popup-bg);
+    border-radius: 4px;
+    border: solid 1px var(--theme-popup-border);
+    padding: 0.6em;
+    box-shadow: inset 0 -1px 0 var(--theme-hover);
+    z-index: 1000;
+}
+a.bypass-block:focus {
+    clip-path: none;
+}
