Fix theme selector for RTL.

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -582,6 +582,6 @@ ul#searchresults span.teaser em {
 .theme-selected::before {
     display: inline-block;
     content: "✓";
-    margin-left: -14px;
+    margin-inline-start: -14px;
     width: 14px;
 }
