--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -268,20 +268,17 @@
         {{/if}}
 
         {{#if google_analytics}}
-        <!-- Google Analytics Tag -->
+        <!-- Google tag (gtag.js) -->
+        <script async="async" src="https://www.googletagmanager.com/gtag/js?id={{google_analytics}}"></script>
         <script>
-            var localAddrs = ["localhost", "127.0.0.1", ""];
-
+            var localAddrs = ["localhost", "127.0.0.1", "[::1]", ""];
             // make sure we don't activate google analytics if the developer is
             // inspecting the book locally...
             if (localAddrs.indexOf(document.location.hostname) === -1) {
-                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-                ga('create', '{{google_analytics}}', 'auto');
-                ga('send', 'pageview');
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', '{{google_analytics}}');
             }
         </script>
         {{/if}}
