--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -50,7 +50,7 @@
 
         {{#if mathjax_support}}
         <!-- MathJax -->
-        <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/{{ mathjax_config }}.js"></script>
         {{/if}}
     </head>
     <body class="sidebar-visible no-js">
