Add 'shelf' command
Initial processing of the shelf.toml file.
Build the books in the current_dir.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -184,6 +184,11 @@
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                         {{/if}}
+                        {{#if book_shelf_url}}
+                        <a href="{{ book_shelf_url }}" title="Return to bookshelf" aria-label="Return to bookshelf">
+                            <i id="shelf-button" class="fa fa-book"></i>
+                        </a>
+                        {{/if}}
 
                     </div>
                 </div>
