--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -202,6 +202,10 @@ kbd {
     display: inline;
 }
 
+.footnote-reference{
+    line-height: 0;
+}
+
 .tooltiptext {
     position: absolute;
     visibility: hidden;
