--- a/templates/toc.html
+++ b/templates/toc.html
@@ -14,30 +14,28 @@
         -->
         <meta charset="UTF-8">
         <meta name="robots" content="noindex">
-        {{#if base_url}}
+        {% if base_url %}
         <base href="{{ base_url }}">
-        {{/if}}
+        {% endif %}
         <!-- Custom HTML head -->
-        {{> head}}
+        {% include "head.html" %}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="{{ path_to_root }}css/variables.css">
         <link rel="stylesheet" href="{{ path_to_root }}css/general.css">
         <link rel="stylesheet" href="{{ path_to_root }}css/chrome.css">
-        {{#if print_enable}}
+        {% if print_enable %}
         <link rel="stylesheet" href="{{ path_to_root }}css/print.css" media="print">
-        {{/if}}
+        {% endif %}
         <!-- Fonts -->
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/font-awesome.css">
-        {{#if copy_fonts}}
+        {% if copy_fonts %}
         <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css">
-        {{/if}}
+        {% endif %}
         <!-- Custom theme stylesheets -->
-        {{#each additional_css}}
-        <link rel="stylesheet" href="{{ ../path_to_root }}{{ this }}">
-        {{/each}}
+        {% for extra_css in additional_css %}
+        <link rel="stylesheet" href="{{ ../path_to_root }}{{ extra_css }}">
+        {% endfor %}
     </head>
-    <body class="sidebar-iframe-inner">
-        {{#toc}}{{/toc}}
-    </body>
+    <body class="sidebar-iframe-inner">{% include "toc.js" %}</body>
 </html>
