--- a/src/front-end/templates/index.hbs
+++ b/src/front-end/templates/index.hbs
@@ -63,6 +63,7 @@
         <script src="{{ resource "toc.js" }}"></script>
     </head>
     <body>
+    <div id="help-overlay"></div>
     <div id="body-container">
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
         <script>
