Fix `mode-rust.js` load error

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -280,9 +280,9 @@
         {{/if}}
 
         {{#if playground_js}}
+        <script>const modeRustSrc = "{{ resource "mode-rust.js" }}";</script>
         <script src="{{ resource "ace.js" }}"></script>
         <script src="{{ resource "editor.js" }}"></script>
-        <script src="{{ resource "mode-rust.js" }}"></script>
         <script src="{{ resource "theme-dawn.js" }}"></script>
         <script src="{{ resource "theme-tomorrow_night.js" }}"></script>
         {{/if}}
