--- a/src/front-end/css/general.css
+++ b/src/front-end/css/general.css
@@ -288,6 +288,7 @@ sup {
     right: 0;
     bottom: 0;
     background-color: rgba(225,225,225,1);
+    color: black;
     z-index: 2;
     cursor: pointer;
     border-width: 3px;
@@ -296,6 +297,12 @@ sup {
     border-radius: 25px;
 
     padding: 10px;
+}
+#help-overlay kbd {
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+    background-color: white;
 }
 #help-title {
     text-align: center;
